# code-snippet

./: .gitignore  build.sh
cpp/: CMakeLists.txt  gen_version.cpp  leak_sample.cpp  parse_sps.cpp  test_atoi.cpp  test_constexpr.cpp  test_map.cpp  test_ref_null.cpp  test_rref.cpp  test_static.cpp  test_weak_ptr.cpp
scripts/: format-code.sh
shm/: CMakeLists.txt  memfd_reader.cpp  memfd_writer.cpp  posix_shm_reader.cpp  posix_shm_writer.cpp  sysv_shm_reader.cpp  sysv_shm_writer.cpp
